[gd_scene load_steps=13 format=3 uid="uid://deqidws5fh2xn"]

[ext_resource type="Script" uid="uid://c0ice8kwquilp" path="res://scripts/race_selector.gd" id="1_unm07"]
[ext_resource type="Texture2D" uid="uid://nryt1is5p6vm" path="res://art/UI/UI_Wood_C_Border.png" id="2_5b3nc"]
[ext_resource type="Script" uid="uid://qu13ruvkc63x" path="res://scripts/backButton.gd" id="3_ect6n"]
[ext_resource type="Texture2D" uid="uid://ullende40irc" path="res://art/UI/Pixel UI/Colors/Cyan/cyan_spritesheet.png" id="4_0uqx5"]
[ext_resource type="Theme" uid="uid://bjldftgjbp5df" path="res://themes/Button.tres" id="5_koadn"]
[ext_resource type="Texture2D" uid="uid://bplnnq7kmkcwf" path="res://art/UI/Pixel UI/Colors/Red/red_spritesheet.png" id="6_j4mb7"]
[ext_resource type="Texture2D" uid="uid://4fhwaajou2lp" path="res://art/UI/UI_Wood_Flat.png" id="7_sq7yf"]
[ext_resource type="Theme" uid="uid://04h0bha3cylt" path="res://themes/stat_window.tres" id="8_0pl4q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ygu1"]
atlas = ExtResource("2_5b3nc")
region = Rect2(223.527, 287.623, 32.8422, 32.8422)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5hhl"]
atlas = ExtResource("4_0uqx5")
region = Rect2(0, 0, 70, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu8b0"]
atlas = ExtResource("6_j4mb7")
region = Rect2(0, 0, 70, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pl4q"]
atlas = ExtResource("7_sq7yf")
region = Rect2(0, 65.121, 160.67, 159.441)

[node name="Node2D" type="Node2D"]
texture_filter = 1
script = ExtResource("1_unm07")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 721.0
offset_bottom = 1287.0
color = Color(0.363152, 0.566483, 0.450595, 1)

[node name="BackButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 25.0
offset_top = 22.0
offset_right = 119.0
offset_bottom = 111.0
texture_normal = SubResource("AtlasTexture_6ygu1")
stretch_mode = 0
script = ExtResource("3_ect6n")

[node name="chooseHorse" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 167.0
offset_top = 861.0
offset_right = 582.0
offset_bottom = 971.0
texture_normal = SubResource("AtlasTexture_l5hhl")
stretch_mode = 0

[node name="horseName" type="RichTextLabel" parent="chooseHorse"]
layout_mode = 0
offset_left = 18.0
offset_top = 22.0
offset_right = 398.0
offset_bottom = 73.0
mouse_filter = 1
theme = ExtResource("5_koadn")
bbcode_enabled = true
text = "[center]Pick Horse[center]"

[node name="raceName" type="RichTextLabel" parent="."]
offset_left = 167.0
offset_top = 298.0
offset_right = 581.0
offset_bottom = 338.0

[node name="startButton" type="TextureButton" parent="."]
offset_left = 190.0
offset_top = 1028.0
offset_right = 562.0
offset_bottom = 1128.0
texture_normal = SubResource("AtlasTexture_fu8b0")
stretch_mode = 0

[node name="text" type="RichTextLabel" parent="startButton"]
layout_mode = 0
offset_left = 136.0
offset_top = 15.0
offset_right = 246.0
offset_bottom = 57.0
mouse_filter = 2
theme = ExtResource("8_0pl4q")
theme_override_font_sizes/normal_font_size = 31
text = "Start"

[node name="SkipButton" type="TextureButton" parent="."]
offset_left = 434.0
offset_top = 121.0
offset_right = 657.0
offset_bottom = 201.0
texture_normal = SubResource("AtlasTexture_fu8b0")
stretch_mode = 0

[node name="text" type="RichTextLabel" parent="SkipButton"]
layout_mode = 0
offset_left = 78.0
offset_top = 9.0
offset_right = 188.0
offset_bottom = 51.0
mouse_filter = 2
theme = ExtResource("8_0pl4q")
theme_override_font_sizes/normal_font_size = 31
text = "skip"

[node name="RacePanel" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 71.0
offset_top = 277.0
offset_right = 659.0
offset_bottom = 758.0
texture = SubResource("AtlasTexture_0pl4q")

[node name="Race" type="RichTextLabel" parent="RacePanel"]
layout_mode = 0
offset_left = 54.0
offset_top = 54.0
offset_right = 553.0
offset_bottom = 315.0
theme = ExtResource("8_0pl4q")
theme_override_font_sizes/normal_font_size = 60
text = "The KenDucky Derby"

[node name="Length" type="RichTextLabel" parent="RacePanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.158
anchor_bottom = 0.106
offset_left = 43.0
offset_top = 364.0
offset_right = 215.096
offset_bottom = 405.064
theme = ExtResource("8_0pl4q")
theme_override_font_sizes/normal_font_size = 56
text = "2000m"

[node name="Purse" type="RichTextLabel" parent="RacePanel"]
layout_mode = 0
offset_left = 320.0
offset_top = 367.0
offset_right = 522.0
offset_bottom = 476.0
theme = ExtResource("8_0pl4q")
theme_override_font_sizes/normal_font_size = 56
text = "$2000"

[connection signal="pressed" from="BackButton" to="BackButton" method="_on_pressed"]
[connection signal="pressed" from="chooseHorse" to="." method="_on_pressed"]
[connection signal="pressed" from="startButton" to="." method="_start_race"]
[connection signal="pressed" from="SkipButton" to="." method="_skip_race"]
